# kosciany-poker

./: .gitignore  README.md  render.yaml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/docker-entrypoint.d/: 10-set-ws-url.sh
frontend/src/: App.tsx  index.css
frontend/src/components/: DiceInput.tsx  Die.tsx  ExportButtons.tsx  MenuScreen.tsx  MultiplierToggle.tsx  NetworkControls.tsx  PlayersBar.tsx  RulebookModal.tsx  ScorecardGrid.tsx  ScorecardModal.tsx
frontend/src/game/: gameLogic.test.ts  gameLogic.ts  store.ts  types.ts
frontend/src/net/: websocket.ts
frontend/src/utils/: exporters.ts
