[project]
name = "kosciany-poker-backend"
version = "0.1.0"
description = "Stateless WebSocket broker for Kosciany Poker peer sync"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn[standard]==0.32.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
